@@ -5,6 +5,7 @@ Revision history for Perl module Text::Anagram
       convention where the dist name should be based on the lead module name.
     - Was requiring 5.12.0 but actually works fine under 5.6
     - Added Changes file
+    - Added strict and warnings to test
 
 0.3 2012-09-10 MARCC
 
